--- a/appdetails.json
+++ b/appdetails.json
@@ -16,10 +16,6 @@
       {"id":6, "app":"com.get.client"}
     ],
     "free":[
-      {"id":0, "file":0, "city":"Tokyo New","country":"Japan","image":"japan","ip":"219.100.37.10","active":"true","signal":"a"},
-    {"id":1, "file":0, "city":"Tokyo","country":"Japan","image":"japan","ip":"219.100.37.52","active":"true","signal":"a"},
-     {"id":2, "file":0, "city":"Los Angeles","country":"United States","image":"unitedstates","ip":"133.203.44.247","active":"true","signal":"a"}
-       
-        
+      {"id":0, "file":0, "city":"Tokyo","country":"Japan","image":"japan","ip":"219.100.37.170","active":"true","signal":"a"}
     ]
   }
