--- a/appdetails.json
+++ b/appdetails.json
@@ -16,6 +16,7 @@
       {"id":6, "app":"com.get.client"}
     ],
     "free":[
-      {"id":0, "file":0, "city":"Tokyo","country":"Japan","image":"japan","ip":"219.100.37.170","active":"true","signal":"a"}
+      {"id":0, "file":0, "city":"Tokyo","country":"Japan","image":"japan","ip":"219.100.37.170","active":"true","signal":"a"},
+      {"id":1, "file":1, "city":"Tokyo","country":"Japan","image":"unitedstates","ip":"137.99.148.55","active":"true","signal":"a"}
     ]
   }
